--- a/README
+++ b/README
@@ -34,6 +34,9 @@ phonon points (e.g. GM or M)
 the piezoelectric and flexoeelctric tensor components. The x-point (amplitude) and total energy
 of each perturbed unit cell are included as vectors as well. 
 
+* Data Viewing *
+****************
+
 
 
 * Final Note *
